dawarich/network-policy-dawarich-postgres-restrict-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dawarich-postgres-restrict-ingress
  namespace: dawarich
spec:
  podSelector:
    matchLabels:
      app: dawarich-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dawarich
          podSelector:
            matchLabels:
              app: dawarich
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dawarich
          podSelector:
            matchLabels:
              app: dawarich-postgres-migrate
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9187
